deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: habits
  labels:
    mooneeb.dev/gateway-access: "true"
