deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loop-pwa
spec:
  selector:
    app: loop-pwa
  ports:
    - port: 8080
      targetPort: 8080
