deploy/kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: habits
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - habits.mooneeb.dev
  rules:
    - backendRefs:
        - name: loop-pwa
          port: 8080
